--- a/src/styles/shape.scss
+++ b/src/styles/shape.scss
@@ -9,4 +9,5 @@
 .tile-button_size-s {
   padding: 5px 10px;
   border-radius: 5px;
+  max-height: 29px;
 }
